2001-05-22  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Makefile (BUNDLERULES): Abstracted redundant code for creating
	the distribution tarballs.  Changed to remove CVS subdirs.
	(CONTRIB): Added a list of files in contrib to the ALLFILES macro.
	(DEBFILES): Updated to reflect changes made to the debian dir.

2001-05-22  Elliot Glaysher  <nuriko.chan@home.com>

	* debian/netcomics.files: Explicitly declare /usr/lib/perl5/Netcomics*
	for pkging.
	
2001-05-21  Elliot Glaysher  <nuriko.chan@home.com>

	* debian/docs -> debian/netcomics.docs: Moved file so documentation
	is placed in the netcomics pkg. explicitly.
	* debian/dirs: Removed because it's redundant.
	* debian/netcomics.manpages: Added entry for the comicpage manpage.
	That means one less error from lintian...

2001-05-21  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* netcomics.spec (%files): Added /usr/lib/perl5 files & comicpage 
	manpage.
	* doc/.cvsignore: Fixed so that it wasn't ignoring controlled
	files & ignoring all the generated files.
	* Makefile (doc/Config.pod): Added generation of pod for Config.pm.
	(doc): Added generation of comicpage man & html pages.
	(DEBFILES): Updated to reflect actual list of files.
	(DOCFILES): Added this to include the names of all the controlled
	doc files.

2001-05-21  Elliot Glaysher  <nuriko.chan@home.com>

	* The kind people at sourceforge have moved the gtkcomics file to
	comicpage.
	* Makefile: Update from gtkcomics to comicpage
	* debian/netcomics.files: It's no longer /usr/bin/gtkcomics...
	* debian/netcomics.menu:  "                                  "
	* comicpage: Changed various instances of gtkcomics to ComicPage
	* doc/comicpage.pod: Initial commit.
	* TODO: Removed a couple of things that have been done (like merge
	in comicpage)
	
2001-05-20  Elliot Glaysher  <nuriko.chan@home.com>

	* TODO: Created a comicpage section, at the request of Ben. It's mostly
	his work, though I did make some minor revisions.